--- a/css/index.css
+++ b/css/index.css
@@ -161,21 +161,20 @@ h5 {
   max-width: 1200px;
   margin: 0 auto;
   padding: 0 30px;
-
 }
 
 nav {
-    margin-top: 20px;
+  margin-top: 20px;
   display: flex;
   flex-direction: row;
   justify-content: space-around;
   align-items: center;
 }
-@media only screen and (max-width: 500px ) {
-	nav {
-        flex-direction: column-reverse;
-        justify-content: reverse start;
-    }
+@media only screen and (max-width: 500px) {
+  nav {
+    flex-direction: column-reverse;
+    justify-content: reverse start;
+  }
 }
 
 nav a {
@@ -184,22 +183,67 @@ nav a {
   color: #a8a8a8;
 }
 
-@media only screen and (max-width: 500px ) {
-	nav a{
-        width: 100%;
-        text-justify: center;
-        height: 50px;
-        text-align: center;
-        border-bottom: gray solid 1px;
-        padding-top: 15px;
-    }
+@media only screen and (max-width: 500px) {
+  nav a {
+    width: 100%;
+    text-justify: center;
+    height: 50px;
+    text-align: center;
+    border-bottom: gray solid 1px;
+    padding-top: 15px;
+  }
 
-    .logo-container {
-        width: 100%;
-        text-align: center;
-        border-bottom: gray solid 1px;
-        padding-bottom: 20px;
-    }
+  .logo-container {
+    width: 100%;
+    text-align: center;
+    border-bottom: gray solid 1px;
+    padding-bottom: 20px;
+  }
 }
 
+header {
+  display: flex;
+  justify-content: space-around;
+  padding: 50px 0;
+}
 
+.get-started {
+  display: flex;
+  flex-direction: column;
+  justify-content: space-around;
+  align-items: center;
+  height: 450px;
+}
+
+.h1-container h1 {
+  display: block;
+  height: 100%;
+  font-size: 80px;
+}
+
+.h1-container {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  justify-content: center;
+}
+
+.header-img {
+  width: 400px;
+  height: 400px;
+}
+
+/* Media query for getting rid of globe pic for mobile */
+@media only screen and (max-width: 800px) {
+  .header-img {
+    display: none;
+  }
+}
+
+.btn-lg {
+  background: white;
+  border: black solid 1px;
+  width: 170px;
+  height: 35px;
+  font-size: 16px;
+}
