--- a/css/index.css
+++ b/css/index.css
@@ -162,54 +162,66 @@ h5 {
 
 /* Naviagtion bar */
 nav {
-  margin-top: 20px;
   display: flex;
-  flex-direction: row;
-  justify-content: space-around;
-  align-items: center;
+  flex-direction: column-reverse;
 }
-
-.nav-links {
-  width: 80%;
-  display: flex;
-  flex-direction: row;
-  justify-content: space-around;
+@media only screen and (min-width: 800px) {
+  nav {
+    flex-direction: row;
+  }
 }
 
 nav a {
   text-decoration: none;
   text-decoration: bold;
   color: #a8a8a8;
+  width: 100%;
+  text-justify: center;
+  height: 50px;
+  text-align: center;
+  border-bottom: gray solid 1px;
+  padding-top: 15px;
 }
-
-@media only screen and (max-width: 800px) {
-  nav {
-    flex-direction: column-reverse;
-  }
-}
-
-@media only screen and (max-width: 500px) {
-  .nav-links {
-    flex-direction: column-reverse;
-    justify-content: start;
-    width: 100%;
-  }
-
+@media only screen and (min-width: 500px) {
   nav a {
-    width: 100%;
-    text-justify: center;
-    height: 50px;
-    text-align: center;
-    border-bottom: gray solid 1px;
-    padding-top: 15px;
+    border-bottom: none;
   }
+}
 
-  .logo-container {
+.nav-links {
+  display: flex;
+  flex-direction: column;
+}
+@media only screen and (min-width: 500px) {
+  .nav-links {
+    flex-direction: row;
+    justify-content: space-around;
     width: 100%;
-    text-align: center;
-    border-bottom: gray solid 1px;
-    padding-bottom: 20px;
   }
+}
+@media only screen and (min-width: 800px) {
+  .nav-links {
+    justify-content: space-around;
+    width: 75%;
+  }
+}
+
+.logo-container {
+  width: 100%;
+  text-align: center;
+  border-bottom: gray solid 1px;
+  padding-bottom: 20px;
+  justify-content: center;
+}
+@media only screen and (min-width: 500px) {
+  .logo-container {
+    border-bottom: none;
+  }
+}
+@media only screen and (min-width: 800px) {
+    .logo-container {
+        width: 25%;
+    }
 }
 
 /* Index Header */
